--- a/src/asteroids/style.css
+++ b/src/asteroids/style.css
@@ -78,3 +78,16 @@ button:hover{
   51% { visibility: hidden; }
   100% { visibility: hidden; }
 }
+
+
+
+.game-border{
+
+  background: none;
+  margin: 0px;
+
+  -webkit-box-shadow:inset 0px 0px  20px rgba(255, 255, 255, 1);
+  -moz-box-shadow:inset 0px 0px  20px rgba(255, 255, 255, 1);
+  box-shadow:inset 0px 0px  20px rgba(255, 255, 255, 1);
+
+}
